--- a/src/css/styles/02-selector.css
+++ b/src/css/styles/02-selector.css
@@ -1,9 +1,25 @@
+/* body *,
+body * ::before,
+body * ::after {
+  box-sizing: border-box;
+} */
+
 /* 전체 선택자 */
 * {
   color: orange;
 }
 
+body * {
+  color: violet;
+}
+
 /* 요소 선택자 */
+html {
+  /* 기본 글자 크기 = 16px */
+  /* 기본 글자 크기가 10px로 지정됨 */
+  font-size: 0.625em;
+}
+
 p {
   color: blue;
 }
@@ -21,4 +37,60 @@ p {
 /* 속성 선택자 */
 [title] {
   color: pink;
+}
+
+/* 자손 결합 선택자 */
+p span {
+  color: skyblue;
+}
+
+p > span {
+  text-decoration: underline;
+}
+
+/* 가상 요소 */
+h1::before {
+  content: '첫번째 자식 요소';
+}
+
+h1::after {
+  content: '마지막 자식 요소';
+}
+
+p::first-letter {
+  font-size: 3.5rem;
+}
+
+::selection {
+  background-color: darkblue;
+  color: white;
+}
+
+/* 가상 클래스 */
+:root {
+  font-size: 0.75em;
+}
+
+/* 선택자 그룹화 */
+h1 span,
+h2 span,
+h3 span,
+h4 span,
+h5 span,
+h6 span {
+  background-color: yellow;
+  color: black;
+}
+
+/* 가상 클래스를 이용한 선택자 그룹화 */
+/* is 선택자는 클래스 > 요소 우선순위 규칙 순위로 적용됨 */
+:is(.heading, h2, h3, h4, h5, h6) span {
+  background-color: salmon;
+  color: blue;
+}
+
+/* where은 우선순위 규칙 순위가 제일 낮음 */
+:where(h1, h2, h3, h4, h5, h6) span {
+  background-color: lightgreen;
+  color: red;
 }
